# Concepts-of-CPP-Excercises

./: README.md
hw01/: hw01.cpp  library.lib
hw02/: .gitignore  CMakeLists.txt  combinatorics.cpp  combinatorics.h  hw02.h  hw02.lib
hw03/: CMakeLists.txt  contact_list.cpp
hw04/: vm.cpp  vm.h
hw05/: run.cpp  validator.cpp  validator.h
hw06/: CMakeLists.txt  run.cpp  vector.cpp  vector.h
hw07/: audio.cpp  audio.h  document.cpp  document.h  file.cpp  file.h  filecontent.cpp  filecontent.h  filesystem.cpp  filesystem.h  image.cpp  image.h  run.cpp  video.cpp  video.h
hw08/: client.cpp  client.h  connection.cpp  connection.h  filedescriptor.cpp  filedescriptor.h  server.cpp  server.h  socket.cpp  socket.h
hw09/: run.cpp  vector.h
hw10/: fibonacci.h  primes.h  quadruple.h
hw11/: constexprmap.h
tests/: CMakeLists.txt
tests/hw01/: compile
